--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.btn-common{
+  @apply px-4 py-3 text-white font-semibold bg-gradient-to-r from-purple-600 to-fuchsia-500 rounded-lg
+}
+
+.active{
+  @apply font-bold tracking-wide text-blue-700 transition-colors duration-200 hover:text-blue-400
+}
+
+.default{
+  @apply font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-blue-400
+}
