--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@
 .default{
   @apply font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-blue-400
 }
+
+.btn-common2{
+  @apply px-3 py-2 text-white font-semibold bg-gradient-to-r from-cyan-400 to-fuchsia-400 rounded-lg
+}
