--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+.navbar-container{
+  @apply flex flex-col md:flex-row justify-between px-3 md:px-6 pt-4 md:pt-4 
+  bg-gradient-to-r from-purple-300 via-fuchsia-300 to-purple-300 pb-2 space-y-4 md:space-y-0
+}
 
 .btn-common{
   @apply px-4 py-3 text-white font-semibold bg-gradient-to-r from-purple-600 to-fuchsia-500 rounded-lg
 }
 
 .active{
-  @apply font-bold tracking-wide text-blue-700 transition-colors duration-200 hover:text-blue-400
+  @apply font-extrabold tracking-wide text-fuchsia-900 transition-colors duration-200 hover:text-fuchsia-500
 }
 
 .default{
-  @apply font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-blue-400
+  @apply font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-fuchsia-500
 }
 
 .btn-common2{
