--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,6 @@
 .btn-common2{
   @apply px-3 py-2 text-white font-semibold bg-gradient-to-r from-cyan-400 to-fuchsia-400 rounded-lg
 }
+.btn-common3{
+  @apply px-1 py-1 text-white font-semibold bg-gradient-to-r from-cyan-400 to-fuchsia-400 rounded-lg
+}
